--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <title>Estadisticas CCV</title>
+    <title>Estadísticas CCV</title>
     <!-- Bootstrap Core CSS -->
     <link href="dist/bootstrap/css/bootstrap.css" rel="stylesheet">
     <!-- MetisMenu CSS -->
@@ -190,7 +190,7 @@
                                             <span>
                                                 <h4>Cali, desde otra perspectiva</h4>
                                                 <p class="text-justify">
-                                                    Mediante ésta aplicación web todos los ciudadanos podrán conocer de manera gráfica, dinámica y breve, información relevante de la ciudad de Santiago de Cali. Éstos datos son extraidos de los Informes de Calidad de vida y las Encuestas de percepción ciudadana elaborados por el Programa Cali Cómo Vamos.<br><br>
+                                                    Mediante ésta aplicación web todos los ciudadanos podrán conocer de manera gráfica, dinámica y breve, información relevante de la ciudad de Santiago de Cali. Éstos datos son extraídos de los Informes de Calidad de vida y las Encuestas de percepción ciudadana elaborados por el Programa Cali Cómo Vamos.<br><br>
 
                                                     Si deseas conocer el funcionamiento de la aplicación pulsa el siguiente botón.
                                                 </p>
@@ -343,7 +343,7 @@
                                                 <h5>Pulsa para descargar los datos</h5>
                                                 <div class="row">
                                                     <div class="col-md-12 col-lg-6">
-                                                        <h6>Archivos tipo imágen</h6>
+                                                        <h6>Archivos tipo imagen</h6>
                                                         <div class="btn-group btn-group-justified" role="group">
                                                             <div class="btn-group" role="group">
                                                                 <button type="button" class="btn btn-colorTols-blueCCV" onclick="exportarDatos('image/jpeg')">JPG</button>
@@ -392,7 +392,7 @@
                             <ul class="nav nav-tabs">
                                 <li class="active dropdown btn-group"><a class="btn dropdown-toggle" href="#tab-main" data-toggle="dropdown">Herramientas <span class="caret"></span></a>
                                     <ul class="dropdown-menu">
-                                        <li class="active"><a href="#tab-dropdown1" data-toggle="tab">Descripcion</a></li>
+                                        <li class="active"><a href="#tab-dropdown1" data-toggle="tab">Descripción</a></li>
                                         <li><a href="#tab-dropdown2" data-toggle="tab">Personalizar</a></li>
                                         <li><a href="#tab-dropdown3" data-toggle="tab">Tabla</a></li>
                                         <li><a href="#tab-dropdown4" data-toggle="tab">Descarga</a></li>
@@ -478,7 +478,7 @@
                                                 <h4>Descarga de datos</h4>
                                                 <div class="row">
                                                     <div class="col-md-12 col-lg-6">
-                                                        <h6>Archivos tipo imágen</h6>
+                                                        <h6>Archivos tipo imagen</h6>
                                                         <div class="btn-group btn-group-justified" role="group">
                                                             <div class="btn-group" role="group">
                                                                 <button type="button" class="btn btn-colorTols-blueCCV" onclick="exportarDatos('image/jpeg')">JPG</button>
@@ -539,7 +539,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="iconccv icon-Icon_HelpClose"></i></button>
-                    <h4 class="modal-title" id="myModalLabel">¿Cómo usar la apliación de Cali Cómo Vamos?</h4>
+                    <h4 class="modal-title" id="myModalLabel">¿Cómo usar la aplicación de Cali Cómo Vamos?</h4>
                 </div>
                 <div class="modal-body">
                     <div class="embed-responsive embed-responsive-16by9">
@@ -559,7 +559,7 @@
                     <div class="alert alert-danger" role="alert" id="AlertMessage">
                         <strong>Hubo un error en la consulta</strong>
                         <p>Intente recargar la página. Si el error continua contacte al soporte de CCV.
-                            <br>Teléfono: 3188000 EXT: 14140/1/2/3.</p>
+                        <br>Teléfono: 3188000 EXT: 14140/1/2/3.</p>
                     </div>
                     <button class="btn btn-danger btn-sm btn-block" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">Ver error técnico</button>
                     <div class="collapse" id="collapseExample">
@@ -579,7 +579,7 @@
                     <div class="alert alert-danger" role="alert" id="AlertMessage">
                         <strong>No se encontraron resultados</strong>
                         <p>El indicador que deseas consultar no existe, verifique si está bien escrito.
-                            <br>Te suguerimos hacer uso de los resultados recomendados en tiempo real, son más efectívos.</p>
+                        <br>Te sugerimos hacer uso de los resultados recomendados en tiempo real, son más efectivos.</p>
                     </div>
                 </div>
             </div>
