--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <title>Estadísticas CCV</title>
+    <title>CalIndica App</title>
     <!-- Bootstrap Core CSS -->
     <link href="dist/bootstrap/css/bootstrap.css" rel="stylesheet">
     <!-- MetisMenu CSS -->
@@ -38,7 +38,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <span class="navbar-brand">ESTADISTICAS CCV</span>
+                    <span class="navbar-brand"><img id="calindica" src="dist/img/LogoCalindica.png" alt="Logo App" /></span>
                 </div>
                 <!-- /.navbar-header -->
                 <ul class="nav navIcon navbar-top-links navbar-right">
@@ -216,15 +216,13 @@
                                     <div class="col-xs-12 col-md-6">
                                         <h4>Contacto:</h4>
                                         <address class="center-block">
-                                            <strong>Dirección: </strong> Calle 2 A # 24C – 95 Barrio San Fernando.
-                                            <br> Universidad Autónoma de Occidente Cali.
+                                            <strong>Dirección: </strong> Calle 8 Nº 3 - 14.
+                                            <br> Cámara de Comercio de Cali.
                                             <br>
-                                            <strong>Teléfono: </strong>3188000 EXT: 14140/1/2/3
+                                            <strong>Teléfono: </strong>8861300 EXT: 122-611-507
                                             <br>
                                             <strong>Email: </strong>
-                                            <a href="mailto:#">coordinacion@calicomovamos.org.co</a>
-                                            <br>
-                                            <a href="mailto:#">asistente@calicomovamos.org.co</a>
+                                            <a href="mailto:#">contacto@calicomovamos.org.co</a>
                                             <br>
                                             <strong>Desarrollo: </strong>Jesús David Padilla Cabrera.
                                         </address>
