Modificación video tutorial
Cambio de fuente para el video tutoría. Corrección de error en el link
de descarga de la fuente de datos “Diccionario de datos”.

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                                             <span>
                                                 <h4>Cali, desde otra perspectiva</h4>
                                                 <p class="text-justify">
-                                                    Mediante ésta aplicación web todos los ciudadanos podrán conocer de manera gráfica, dinámica y breve, información relevante de la ciudad de Santiago de Cali. Éstos datos son extraídos de los Informes de Calidad de vida y las Encuestas de percepción ciudadana elaborados por el Programa Cali Cómo Vamos.<br><br>
+                                                    Mediante esta aplicación web todos los ciudadanos podrán conocer de manera gráfica, dinámica y breve, información relevante de la ciudad de Santiago de Cali. Éstos datos son extraídos de los Informes de Calidad de vida y las Encuestas de percepción ciudadana elaborados por el Programa Cali Cómo Vamos.<br><br>
 
                                                     Si deseas conocer el funcionamiento de la aplicación pulsa el siguiente botón.
                                                 </p>
@@ -503,7 +503,7 @@
                                                         <h6>Banco de datos completo (Todos los indicadores) - Ckan</h6>
                                                         <div class="btn-group btn-group-justified" role="group">
                                                             <div class="btn-group" role="group">
-                                                                <button type="button" class="btn btn-default" href="http://goo.gl/W6BUlN">Diccionario de datos</button>
+                                                                <a type="button" class="btn btn-default" href="http://goo.gl/W6BUlN">Diccionario de datos</a>
                                                             </div>
                                                             <div class="btn-group" role="group">
                                                                 <a type="button" class="btn btn-default" href="http://goo.gl/4Wtcf2">Recopilatorio de datos</a>
@@ -537,7 +537,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/pzlZXZEckBs"></iframe>
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/UoB60OvGRm8"></iframe>
                     </div>
                 </div>
             </div>
